<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cindy.madlibs.FillWordsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:text="@string/fill_words" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>


        <TextView android:text="@string/words_left" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/words_left"
            android:textSize="18sp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:id="@+id/word_hint"
                android:hint="@string/word_edit_text"
                android:textSize="20sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_word_ready"
                android:clickable="true"
                android:onClick="fillWordActivity"
                android:layout_gravity="right"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView android:text="@string/word_type" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/word_type"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"/>
    </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak_word"
            android:clickable="true"
            android:onClick="speakWordActivity"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:textSize="20sp"/>


</RelativeLayout>
