<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cindy.madlibs.StoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/text">

            <TextView android:text="@string/mad_lib_story" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:id="@+id/your_story_text"
                android:textStyle="bold"/>

            <TextView android:text="ERROR" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/story_text"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_speak_story"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="onClickSpeakStory"
            android:id="@+id/speakButton"
            android:layout_below="@+id/text"
            android:layout_marginTop="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_new_story"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="onClickNewStory"
            android:layout_below="@+id/speakButton"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
